# llm-examples

./: .env.example  README.md  docker-compose.yaml
.github/workflows/: build-backend.yaml  build-frontend.yaml  lint-backend.yaml  lint-frontend.yaml
backend/: .gitignore  .ruff.toml  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 3cae33950f7b_initial.py
backend/db/: Dockerfile
backend/src/: config.py  memory.py  server.py
backend/src/custom_memory/: db_connection.py  memory.py  stores.py
backend/src/router/: conversation.py  health.py
backend/src/templates/: default.py
frontend/: .env.development  .eslintrc.json  .prettierrc.js  Dockerfile  package-lock.json  package.json  tailwind.config.ts  tailwindcss.flattenColorPalette.d.ts
frontend/src/: middleware.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx  template.tsx
frontend/src/app/api/: api_client.ts
frontend/src/atoms/: atoms.ts
frontend/src/components/ConversationHistory/: ConversationHistory.tsx  index.ts
frontend/src/components/ConversationInputForm/: ConversationInputForm.tsx  index.ts
frontend/src/components/ConversationList/: ConversationList.tsx
frontend/src/components/ConversationListDrawer/: ConversationListDrawer.tsx  index.ts
frontend/src/components/ConversationWindow/: ConversationWindow.tsx  index.ts
frontend/src/components/Header/: Header.tsx
frontend/src/components/Message/: index.ts
frontend/src/components/ScrollFade/: index.ts  (+1 more)
frontend/src/hooks/: useSendMessage.ts
frontend/src/types/: author.ts  message.ts
(+20 files in other folders)
