[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["av3n93rz <daniel.raffer@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
ruff = "^0.2.2"
uvicorn = "^0.27.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
